feat: add list project page

--- a/content/projects/notice-scent.mdx
+++ b/content/projects/notice-scent.mdx
@@ -15,7 +15,7 @@ date: '08-05-2024'
 - The website is integrated with `Google Analytics` and `Google Tag Manager`.
 - The website is multi-language `Indonesian` and `English`.
 
-## The technology we use
+## The technology i use
 
 - NextJS
 - TailwindCSS
