feat: add detail content project

--- a/content/projects/flexstudio-id.mdx
+++ b/content/projects/flexstudio-id.mdx
@@ -7,6 +7,28 @@ previewUrl: 'https://flexstudio.id'
 date: '01-01-2024'
 ---
 
-## Objective
+## Background Story
 
-To make a landing page for my own Agency
+After some freelance projects, I decided to make a brand that stands for Development and Design. I want to help my friends who are either in the Programming or Design world. The second reason is that I want to solve the problem that people are still struggling to make their websites look good and efficient with the newest technology, especially in my own country, which still underestimates the beauty of good design and good websites.
+
+## The technology i use
+
+- NextJS
+- TailwindCSS
+- Supabase
+- Vercel
+- TypeScript
+
+## Project Structure
+
+The main website is created by NextJS 14 using an App router, the content like projects is stored in the supabase that I manage in my custom CMS that can create and edit some content in the website, those two websites interact with the supabase.
+
+## Features and Pages
+
+- [x] Latest roject
+- [x] Project List
+- [x] Detail Project
+- [x] Feedback
+- [ ] Latest Blog
+- [ ] Blog List
+- [ ] Detail Blog
