--- a/content/projects/futo-app.mdx
+++ b/content/projects/futo-app.mdx
@@ -6,6 +6,40 @@ tags: ['ViteJS', 'TypeScript', 'RectJS', 'TailwindCSS', 'Supabase', 'Radix-UI']
 date: '03-11-2023'
 ---
 
-## Objective
+## Breakdown
 
-To make a landing page for my own Agency
+The business owner wants to change the way his sales data is handled, which was previously managed in a spreadsheet, he wants to import it into a web app and each division can manage the data from that app.
+
+## Technology used
+
+### Front End:
+
+- TypeScript (Programming Language)
+
+- React JS (UI Library)
+
+- ViteJS (Front End Build Tool)
+
+- Zustand (State Management)
+
+- TailwindCSS (CSS Library)
+
+- Supabase-Client (Supabase Client Library)
+
+- Shadcn UI (Component library)
+
+### Back End:
+
+- Supabase (Firebase alternative)
+
+## Reasons why you chose that technology?
+
+Because the project deadline is only one month, and work starts with the design first, we don't want the web work (coding) to take up too much time, so we choose technologies that are easy and quick to apply to the website, such as using Shadcn UI which is a component library which provides many ready-made components and is easy to customize.
+
+Even though the deadline was tight, we still chose TypeScript over JavaScript because we wanted to minimize errors when working on the website.
+
+By using services from Supabase we don't need to create an API service from scratch, and with a SQL-based database, it becomes easier for us to create a flow of data because this website has related data.
+
+With the above technologies, this project can be completed on time, but we cannot show the designs due to privacy issues, etc.
+
+Thank You.
